# iumenu

./: Cargo.toml  README.md
.config/iumenu/: config.toml  style.css
src/: app.rs  args.rs  config.rs  main.rs  style.rs  util.rs
src/action/: mod.rs
src/freedesktop/: desktop_entry.rs
src/windows/: mod.rs
