[package]
name = "iumenu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
rust-ini = "0.21.1"
toml = "0.8.19"
dirs = "5.0.1"
shellexpand = "3.1.0"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"